modify the submit button to prevent an issue with topics being deleted if pressing enter

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
           <br />
 
           <!-- Button triggers new movie to be added -->
-          <button type="button" class="btn btn-success btn-topics-input">
-            Add a City, Yo!
-          </button>
+          <input
+            type="submit"
+            class="btn btn-success btn-topics-input"
+            value="Add a City, Yo!"
+          />
         </form>
       </div>
     </div>
