--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>GifTastic</title>
     <!-- --------------------------------------------------------- -->
 
-    <!-- FavIcon 
-    <link rel="icon" type="image/png" href="assets/images/trivia_favicon.png" /> -->
+    <!-- FavIcon -->
+    <link rel="icon" type="image/png" href="assets/images/GifTastic.png" />
     <!-- Proper rendering for mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Reset Style CSS -->
