--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="col-3.col-sm-3.col-md-3.col-lg-3.col-xl-3 userGiphy">
         <form id="user-topics-form">
           <label for="topics-input">Add a City, Yo!</label>
-          <input type="text" id="topics-input" />
+          <input type="text" id="topics-input" placeholder="City" />
           <br />
 
           <!-- Button triggers new movie to be added -->
