--- a/index.html
+++ b/index.html
@@ -56,12 +56,10 @@
       <div class="d-inline p-2 buttonArea"></div>
     </div>
     <div class="row">
-      <div
-        class="col-12.col-sm-12.col-md-12.col-lg-12.col-xl-12 giphyArea"
-      ></div>
-      <div class="col-3.col-sm-3.col-md-3.col-lg-3.col-xl-3 userGiphy">
+      <div class="col-sm-9 giphyArea"></div>
+      <div class="col-sm userGiphy">
         <form id="user-topics-form">
-          <label for="topics-input">Add a City, Yo!</label>
+          <div for="topics-input">Add City</div>
           <input type="text" id="topics-input" placeholder="City" />
           <br />
 
@@ -69,11 +67,10 @@
           <input
             type="submit"
             class="btn btn-success btn-topics-input"
-            value="Add a City, Yo!"
+            value="Submit"
           />
         </form>
       </div>
     </div>
-    <!--  Here 1 -->
   </body>
 </html>
