--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <div class="d-inline p-2 buttonArea"></div>
     </div>
     <div class="row">
-      <div class="col-sm-9 giphyArea"></div>
-      <div class="col-sm userGiphy">
+      <div class="col-9 giphyArea"></div>
+      <div class="col userGiphy">
         <form id="user-topics-form">
           <div for="topics-input">Add City</div>
           <input type="text" id="topics-input" placeholder="City" />
