modify user topics button to show add new topics and placeholder ---> topic

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <div class="col-9 giphyArea"></div>
       <div class="col userGiphy">
         <form id="user-topics-form">
-          <div for="topics-input">Add City</div>
-          <input type="text" id="topics-input" placeholder="City" />
+          <div for="topics-input">Add New Topics</div>
+          <input type="text" id="topics-input" placeholder="Topic" />
           <br />
 
           <!-- Button triggers new movie to be added -->
