--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
     ></script>
-    <script src="assets/javascript/index.js"></script>
   </head>
 
   <body>
@@ -72,5 +71,6 @@
         </form>
       </div>
     </div>
+    <script src="assets/javascript/app.js"></script>
   </body>
 </html>
